--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ts-node": "^9.1.1"
   },
   "dependencies": {
+    "@prisma/client": "^2.20.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "pg": "^8.5.1",
