--- a/package.json
+++ b/package.json
@@ -12,16 +12,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.16",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/express-session": "^1.17.3",
+    "@types/ioredis": "^4.22.3",
     "@types/node": "^14.14.37",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1"
   },
   "dependencies": {
     "@prisma/client": "^2.20.1",
+    "argon2": "^0.27.2",
+    "connect-redis": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "ioredis": "^4.26.0",
     "pg": "^8.5.1",
     "prisma": "^2.20.1",
     "typescript": "^4.2.4"
