--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/express": "^4.17.11",
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.22.3",
+    "@types/multer": "^1.4.5",
+    "@types/multer-s3": "^2.7.9",
     "@types/node": "^14.14.37",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1"
@@ -24,11 +26,15 @@
   "dependencies": {
     "@prisma/client": "^2.20.1",
     "argon2": "^0.27.2",
+    "aws-sdk": "^2.893.0",
     "connect-redis": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "ioredis": "^4.26.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "pg": "^8.5.1",
     "prisma": "^2.20.1",
     "typescript": "^4.2.4"
